# managed_id_with_keyvaut.

./: README.md  main.py  pyproject.toml  sample.example
utility/: __init__.py  keyvault_mcp.py  read_env_from_keyvault.py  save_env_to_keyvault.py
